new structure for index page

--- a/index.html
+++ b/index.html
@@ -34,9 +34,57 @@
 			  		</ul>
 			  	</div>
 		  	</div>
-		  	<div class="row">
-				<div class="twelve columns main">
-				  	<a href="blogs/blogs-index.html" id="breathing-button">Blog</a>
+
+		  	<div class="row ">
+				<div class="twelve columns main" id="aboutmeheader">
+				  	<h5>+ About Me</h5>
+				  	<content class="hide" id="aboutmecontent">
+					  	<p>
+						  	Hey thanks for clicking!  
+					  	<p>
+						<p>
+							My name is Oliver, and I’m a software engineer with skills in front and back end web development.
+						</p>   
+
+						<p>
+							What do I think?  I think life is an adventure.  We spend all day flying round a gigantic blackhole at the centre of our galaxy, with out even noticing.   I think about that from time to time, and it always blows my mind.
+						</p>
+
+						<p>
+							I currently live in Wellington, and I hail from this windy paradise from at least 30 years ago.  I have only just returned after living in the UK for 11 years.
+						</p>
+
+						<p>
+							I have come to love writing code since fist dipping my feet in its murky waters in 2015.  I spent 9 years working in Sales and Business Development in the UK, in the technology and digital industries.  Coming from ‘front of house’ to ‘back of house’ has been an amazing transition, which I don’t regret one bit.  
+						</p>
+
+						<p>
+							The great thing is that  I haven’t lost my old skills, I’ve added to them.  I come to you with a personal gemfile (groan…) including skills:</p>
+						<ul>
+							<li>communication legend</li>
+							<li>stakeholder management guru</li>
+							<li>business development ninja</li>
+							<li>business strategy sensei</li>
+						</ul>
+
+						<p>
+							I describe myself as a bit of a chatty geek.  Outside of writing code, I love exercise, podcasts, solving problems, coffee, bicycles, science fiction, bad jokes and coffee.  I also love coffee.
+						</p>
+
+						<p>
+							If you’re think you might like to bundle install (I’m so sorry…) me at your lovely work place, get in touch.  We can share some of that coffee I love so much.  
+						</p>
+					</content>
+			  	</div>
+				<div class="twelve columns main" id="cvheader">
+				  	<h5>+ C.V.</h5>
+			  	</div>
+			  	<div class="twelve columns main" id="projectsheader">
+				  	<h5>+ Projects</h5>
+			  	</div>
+				<div class="twelve columns main" id="blogheader">
+				  	<h5>+ Blog</h5>
+				  	<!-- <a href="blogs/blogs-index.html" id="breathing-button">Blog</a> -->
 			  	</div>
 		  	</div>
 		</div>
