toggle headers when click, front page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
 
-	<script type="text/javascript" src="scripts/myScripts.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	
+
 
 
     <meta charset="UTF-8">
@@ -78,16 +80,25 @@
 			  	</div>
 				<div class="twelve columns main" id="cvheader">
 				  	<h5>+ C.V.</h5>
+				  	<content class="hide" id="cvcontent">
+				  		<p>Work in progress</p>
+				  	</content>
 			  	</div>
 			  	<div class="twelve columns main" id="projectsheader">
 				  	<h5>+ Projects</h5>
+				  	<content class="hide" id="projectscontent">
+				  		<p>Work in progress</p>
+				  	</content>
 			  	</div>
 				<div class="twelve columns main" id="blogheader">
 				  	<h5>+ Blog</h5>
-				  	<!-- <a href="blogs/blogs-index.html" id="breathing-button">Blog</a> -->
+				  	<content class="hide" id="blogcontent">	
+				  		<p>Work in progress</p>
+				  	</content>
 			  	</div>
 		  	</div>
 		</div>
+		<script type="text/javascript" src="scripts/myScripts.js"></script>
 	</body>
 </html>
 
