styling updated for job display

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 		  	</div>
 
 		  	<div class="row ">
-				<div class="twelve columns main" id="aboutmeheader">
+				<div class="twelve columns main myheader" id="aboutmeheader">
 				  	<h5>+ About Me</h5>
-				  	<content class="hide" id="aboutmecontent">
+				  	<content class="hide mycontent" id="aboutmecontent">
 					  	<p>
 						  	Hey thanks for clicking!  
 					  	<p>
@@ -61,7 +61,8 @@
 						</p>
 
 						<p>
-							The great thing is that  I haven’t lost my old skills, I’ve added to them.  I come to you with a personal gemfile (groan…) including skills:</p>
+						The great thing is that  I haven’t lost my old skills, I’ve added to them.  To name a few:
+						</p>
 						<ul>
 							<li>communication legend</li>
 							<li>stakeholder management guru</li>
@@ -74,14 +75,102 @@
 						</p>
 
 						<p>
-							If you’re think you might like to bundle install (I’m so sorry…) me at your lovely work place, get in touch.  We can share some of that coffee I love so much.  
+							I'm looking for a job, so please get in touch!  We can share some of that coffee I love so much.  
 						</p>
 					</content>
 			  	</div>
-				<div class="twelve columns main" id="cvheader">
+				<div class="twelve columns main myheader" id="cvheader">
 				  	<h5>+ C.V.</h5>
-				  	<content class="hide" id="cvcontent">
-				  		<p>Work in progress</p>
+				  	<content class="hide mycontent" id="cvcontent">
+						<p>
+							<strong class="jobposition">Position: </strong>Student<br>
+							<a href="http://www.devacademy.co.nz" target="_blank" class="employer">Enspiral Development Academy</a>, Wellington, New Zealand.<br>
+							<strong class="jobdate">Duration: </strong>February 2016 - June 2016<br>
+							I retrained as a web developer through this bootcamp style accademy, specialising in HTML, Javascript, NodeJS and Ruby on Rails.
+						</p>
+
+						<p>
+							<strong class="jobposition">Position: </strong>Volunteer Teacher<br>
+							<a href="http://www.gvi.co.uk/location/luang-prabang/" target="_blank" class="employer">GVI Luang Prabang</a>, Luang Prabang, Laos<br>
+							<strong class="jobdate">Duration: </strong>February 2016<br>
+							I had a life changing experience volunteering for a month as an English teacher in Luang Prabang Laos.  I was teaching children and Novice Monks English in local schools, and Buddhist temples.
+						</p>
+						<p>
+							<strong class="jobposition">Position: </strong>Business Development Manager<br>
+							<a href="https://www.talkingtech.com" target="_blank" class="employer">TalkingTech UK</a>, London, United Kingdom<br>
+							<strong class="jobdate">Duration: </strong>2013 - 2016<br>
+							As a Business Development Manager, I sought new partnerships and opportunities  with companies looking to fundamentally change the way the interact with their consumers.  Talkingtech specialises in omni-channel solutions encompassing digital communications, customer experience and payments.
+						</p>
+
+						<p>
+							<strong class="jobposition">Position: </strong>Business Development Manager<br>
+							<a href="http://www.nzte.govt.nz" target="_blank" class="employer">New Zealand Trade & Enterprise</a>, London, United Kingdom<br>
+							<strong class="jobdate">Duration: </strong>2010 - 2013<br>
+							Assisting New Zealand companies internationalise on an individual basis, but also working within regional and global projects.  My responsibilities include providing market intelligence and consultancy services to New Zealand companies, implementing special projects that deliver strategies and solutions for the sustainable economic growth of the New Zealand economy.
+						</p>
+
+						<p>
+							<strong class="jobposition">Position: </strong>Technology Market Researcher<br>
+							<a href="http://www.qi3.co.uk" target="_blank" class="employer">Qi3 Ltd</a>, London, United Kingdom<br>
+							<strong class="jobdate">Duration: </strong>2008 - 2010<br>
+							As Technology Market Researcher, I worked as part of a wider team on a consultant basis for technology companies and universities. Actively involved with researching applications for new technologies, advising commercialisation strategy and finding customers, business partners and funding opportunities.
+						</p>
+
+						<p>
+							<strong class="jobposition">Position: </strong>Internal Sales<br>
+							<a href="http://www.laser2000.co.uk/" target="_blank" class="employer">Laser 2000 Ltd</a>, Cambridge, United Kingdom","Internal Sales Assistant, 2006-2008"],<br>
+							<strong class="jobdate">Duration: </strong>2006 - 2008<br>
+							Inernal Sales assistant.
+						</p>
+
+						<p>
+							<strong class="jobposition">Position: </strong>Intern Laser Engineer<br>
+							<a href="http://www.coherent.com" target="_blank" class="employer">Coheret Systems</a>, Glasgow, United Kingdom<br>
+							<strong class="jobdate"></strong>2006<br>
+							I was part of a research and development team, working on new product development with laboratory and manufacturing lasers.
+						</p>
+	
+<!-- 
+var education = { 
+	"schools": [ 
+		{
+		"name": "Enspiral Development Academy",
+		"subjects": "Web Development",
+		"years": "2016",
+		"location": ["Wellinton, New Zealand","Current residence, born & bred"],
+		"major": "HTML, CSS, Javascript, NodeJS, Ruby on Rails"
+		}, 
+		{
+		"name": "University of St Andrews",
+		"subjects": "MSc", 
+		"years": "2005-2006",
+		"location": ["St Andrews, Scotland", "MSc Student, Photonics & Optoelectronics"],
+		"major": "Photonics and Optoelectronics"
+		}, 
+		{
+		"name": "University of Otago",
+		"subjects": "BA",
+		"years": "2001-2005",
+		"location": ["Dunedin, New Zealand", "Undergraduate student, 2001-2005"],
+		"major": "Philosophy, Politics & Economics"
+		},
+		{
+		"name": "University of Otago",
+		"subjects": "BSc",
+		"years": "2001-2005",
+		"location": ["Dunedin, New Zealand", "Undergraduate student, 2001-2005"],
+		"major": "Physics"
+		}
+	]
+
+
+
+
+
+ -->
+
+
+
 				  	</content>
 			  	</div>
 			  	<div class="twelve columns main" id="projectsheader">
