blog index redesign

--- a/blogs/blog-template.html
+++ b/blogs/blog-template.html
@@ -11,49 +11,54 @@
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 		<link rel="stylesheet" type="text/css" href="../styles/main.css">
 		<script type="text/javascript" src="../scripts/myScripts.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
 	  </head>
 	  
 	  <body>
-			<script type="text/javascript" src="../scripts/header.js"></script>
-			<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
-	  	  	<section class="container">
-		  
-			  	<div class="row">
-				  	<header class="twelve columns heading">
-					  		<h3>Blog Title here</h3>
-				  			<h5>Oliver Stigley</h5>
-				  	</header>
-			  	</div>
+			<div id="mypic">
+				<script type="text/javascript" src="../scripts/header.js"></script>
 
-				<section class="container">
-					<div class="row">
-						<article class="twelve columns blogcontent">
-							<p>dates 23 february tags a b c </p>
+				<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
+		  	  	<section class="container">
+			  
+				  	<div class="row">
+					  	<header class="twelve columns heading">
+						  		<h3>Blog Title here</h3>
+					  			<h5>Oliver Stigley</h5>
+					  	</header>
+				  	</div>
 
-							<p> 
-								FRom faireſt creatures we deſire increaſe,  That thereby beauties Roſe might neuer die,  But as the riper ſhould by time deceaſe,  His tender heire might beare his memory:  But thou contracted to thine owne bright eyes,  Feed’ſt thy lights flame with ſelfe ſubſtantiall fewell,  
-							</p>
-							<p>
-								Making a famine where aboundance lies,  Thy ſelfe thy foe,to thy ſweet ſelfe too cruell:  Thou that art now the worlds freſh ornament,  And only herauld to the gaudy ſpring,  Within thine owne bud burieſt thy content,  And tender chorle makſt waſt in niggarding:  Pitty the world,or elſe this glutton be,  To eate the worlds due,by the graue and thee.
-							</p>	
-							<p>
-								Making a famine where aboundance lies,  Thy ſelfe thy foe,to thy ſweet ſelfe too cruell:  Thou that art now the worlds freſh ornament,  And only herauld to the gaudy ſpring,  Within thine owne bud burieſt thy content,  And tender chorle makſt waſt in niggarding:  Pitty the world,or elſe this glutton be,  To eate the worlds due,by the graue and thee.
-							</p>
+			  	</section>
+		  	</div>
 
-							<a href="#">Here's my link</a>
+			<section class="container">
+				<div class="row">
+					<article class="twelve columns blogcontent">
+						<p>dates 23 february tags a b c </p>
 
-							<ul>
-								<li>lists</li>
-								<li>lists</li>
-								<li>lists</li>
-								<li>lists</li>
+						<p> 
+							FRom faireſt creatures we deſire increaſe,  That thereby beauties Roſe might neuer die,  But as the riper ſhould by time deceaſe,  His tender heire might beare his memory:  But thou contracted to thine owne bright eyes,  Feed’ſt thy lights flame with ſelfe ſubſtantiall fewell,  
+						</p>
+						<p>
+							Making a famine where aboundance lies,  Thy ſelfe thy foe,to thy ſweet ſelfe too cruell:  Thou that art now the worlds freſh ornament,  And only herauld to the gaudy ſpring,  Within thine owne bud burieſt thy content,  And tender chorle makſt waſt in niggarding:  Pitty the world,or elſe this glutton be,  To eate the worlds due,by the graue and thee.
+						</p>	
+						<p>
+							Making a famine where aboundance lies,  Thy ſelfe thy foe,to thy ſweet ſelfe too cruell:  Thou that art now the worlds freſh ornament,  And only herauld to the gaudy ſpring,  Within thine owne bud burieſt thy content,  And tender chorle makſt waſt in niggarding:  Pitty the world,or elſe this glutton be,  To eate the worlds due,by the graue and thee.
+						</p>
 
-							</ul>
-						</article>
-					</div>
-				</section>
-		  </section>
+						<a href="#">Here's my link</a>
+
+						<ul>
+							<li>lists</li>
+							<li>lists</li>
+							<li>lists</li>
+							<li>lists</li>
+
+						</ul>
+					</article>
+				</div>
+			</section>
 		</div>
 	  </body>
 	</html>
