some blogs redesigned

--- a/blogs/c1-time-and-habits-blog.html
+++ b/blogs/c1-time-and-habits-blog.html
@@ -10,52 +10,54 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 	<link rel="stylesheet" type="text/css" href="../styles/main.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script type="text/javascript" src="../scripts/myScripts.js"></script>
 
   </head>
   
   <body>
-  	  	<script type="text/javascript" src="../scripts/header.js"></script>
-  	  	<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
-  	  	<div class="container">
-	  	  	
-	  
-		  	<div class="row">
-			  	<div class="twelve columns heading">
-				  		<h3>Time & Habits</h3>
-			  			<h5>Oliver Stigley</h5>
-			  	</div>
-		  	</div>
+  	  	
+  	<div id="mypic">
+  		<script type="text/javascript" src="../scripts/header.js"></script>
+  		<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
+  		<div class="container">
+  			<div class="row">
+  				<div class="twelve columns heading">
+  					<h3>Time & Habits</h3>
+  					<h5>Oliver Stigley</h5>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+		
+	<div class="container">
+		<div class="row">
+			<div class="twelve columns blogcontent">
+				<p>Date: 25 February 2016.</p>
 
-		<div class="container">
-			<div class="row">
-				<div class="twelve columns blogcontent">
-					<p>Date: 25 February 2016.</p>
-
-					<h5>Which timebox and habits techniques did you try?</h5>
-					<p>
-						I'm experimenting with the pomodoro technique, which I have heard of but not used before.  I'm also planning my days quite carefully, so I know what I'm trying to achieve each day.  I spare 15minutes each day, planning the next day.  This makes it easier for me to muck in without hesitation
-					</p>
-
-
-					<h5>What did you find interesting?</h5>
-					<p>
-						I found the concept of making small habits over time to achieve big changes, interesting. In particular the use of existing behaviours to trigger those habits. 
-					</p>
-					<p>
-						The same applies to 'think big' 'start small'.  In a sense this is almost agile thinking.  Breaking large tasks in to small rolling jobs, to make the process smoother and easier to achieve.
-					</p>
+				<h5>Which timebox and habits techniques did you try?</h5>
+				<p>
+					I'm experimenting with the pomodoro technique, which I have heard of but not used before.  I'm also planning my days quite carefully, so I know what I'm trying to achieve each day.  I spare 15minutes each day, planning the next day.  This makes it easier for me to muck in without hesitation
+				</p>
 
 
-					<h5>What worked for you?</h5>
-					<p>Ask me again in 3 months</p>
+				<h5>What did you find interesting?</h5>
+				<p>
+					I found the concept of making small habits over time to achieve big changes, interesting. In particular the use of existing behaviours to trigger those habits. 
+				</p>
+				<p>
+					The same applies to 'think big' 'start small'.  In a sense this is almost agile thinking.  Breaking large tasks in to small rolling jobs, to make the process smoother and easier to achieve.
+				</p>
 
-					<h5>Which will you experiment further with?</h5>
-					<p>I'm going to continue with habit creation, specifically using behavioural triggers.</p>
-				</div>
+
+				<h5>What worked for you?</h5>
+				<p>Ask me again in 3 months</p>
+
+				<h5>Which will you experiment further with?</h5>
+				<p>I'm going to continue with habit creation, specifically using behavioural triggers.</p>
 			</div>
 		</div>
-	  </div>
 	</div>
   </body>
 </html>
