--- a/blogs/c2-emotional-intelligence.html
+++ b/blogs/c2-emotional-intelligence.html
@@ -10,23 +10,29 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 	<link rel="stylesheet" type="text/css" href="../styles/main.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script type="text/javascript" src="../scripts/myScripts.js"></script>
 
   </head>
   
   <body>
-  	  	<script type="text/javascript" src="../scripts/header.js"></script>
-  	  	<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
-  	  	<div class="container">
-	  
-		  	<div class="row">
-			  	<div class="twelve columns heading">
-				  		<h3>Cultural Blog: Emotional Intelligence</h3>
-			  			<h5>Oliver Stigley</h5>
-			  	</div>
-		  	</div>
 
-		<div class="container">
+  	<div id="mypic">
+  		<script type="text/javascript" src="../scripts/header.js"></script>
+  		<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
+
+  		<div class="container">
+  			<div class="row">
+  				<div class="twelve columns heading">
+  					<h3>Cultural Blog: Emotional Intelligence</h3>
+  					<h5>Oliver Stigley</h5>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+
+	<div class="container">
 			<div class="row">
 				<div class="twelve columns blogcontent">
 					<p>Date: 2 March 2016.</p>
@@ -56,8 +62,7 @@
 				</p>
 				</div>
 			</div>
-		</div>
-	  </div>
 	</div>
+	
   </body>
 </html>
