--- a/blogs/c4-daily-mindfulness.html
+++ b/blogs/c4-daily-mindfulness.html
@@ -10,43 +10,44 @@
 	    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 		<link rel="stylesheet" type="text/css" href="../styles/main.css">
-	
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<script type="text/javascript" src="../scripts/myScripts.js"></script>
 
 	  </head>
 	  
 	  <body>
-  	  	<script type="text/javascript" src="../scripts/header.js"></script>
-  	  	<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
-  	  	<div class="container">
-		  
+  	  	<div id="mypic">
+	  	  	<script type="text/javascript" src="../scripts/header.js"></script>
+	  	  	<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
+	  	  	<div class="container">
 			  	<div class="row">
 				  	<header class="twelve columns heading">
 					  		<h3>Mindfulness Conversation</h3>
 				  			<h5>Oliver Stigley</h5>
 				  	</header>
 			  	</div>
+		  	</div>
+	  	</div>
 
-				<section class="container">
-					<div class="row">
-						<article class="twelve columns blogcontent">
-							<p>Date:  15 March</p>
-							<h5>Mindfulness Conversation</h5>
-							<p>
-								In some ways it is hard to sit and listen with intent.  It is a practive we used to do in my old job, for business develpoment.  Removing yourself from a conversation sounds easy, but sometimes, another person expects more from you.  They expect you to engage with more than nodding and agreement.  Still, the experience was very enjoyable.  Having a friend talk with you is always nice!  
-							<p>
-								'Active listening' with intent, and without being constantly driven to say something is an excellent skill.  Too often we are fooled in to thinking 'now it's my turn to say something', when actually you don't need to say anything at all. 
-							</p>
+		<section class="container">
+			<div class="row">
+				<article class="twelve columns blogcontent">
+					<p>Date:  15 March</p>
+					<h5>Mindfulness Conversation</h5>
+					<p>
+						In some ways it is hard to sit and listen with intent.  It is a practive we used to do in my old job, for business develpoment.  Removing yourself from a conversation sounds easy, but sometimes, another person expects more from you.  They expect you to engage with more than nodding and agreement.  Still, the experience was very enjoyable.  Having a friend talk with you is always nice!  
+					<p>
+						'Active listening' with intent, and without being constantly driven to say something is an excellent skill.  Too often we are fooled in to thinking 'now it's my turn to say something', when actually you don't need to say anything at all. 
+					</p>
 
-							<h5>My Practice Techniques</h5>
-							<p> 
-								I'm not sure which or how I will put the learnings from this chapter in to practice.  I didn't quite appreciate the chapter as much as previous ones to be honest.  I'll have to come up with some of my own techniques for practising to be a mindful, but active listener. 
-							</p>
+					<h5>My Practice Techniques</h5>
+					<p> 
+						I'm not sure which or how I will put the learnings from this chapter in to practice.  I didn't quite appreciate the chapter as much as previous ones to be honest.  I'll have to come up with some of my own techniques for practising to be a mindful, but active listener. 
+					</p>
 
-						</article>
-					</div>
-				</section>
-		  </section>
-		</div>
+				</article>
+			</div>
+		</section>
 	  </body>
 	</html>
