--- a/blogs/t2-html-css-dom-p1.html
+++ b/blogs/t2-html-css-dom-p1.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 	<link rel="stylesheet" type="text/css" href="../styles/main.css">
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script type="text/javascript" src="../scripts/myScripts.js"></script>
 
 
