--- a/blogs/t2-html-css-dom-p2.html
+++ b/blogs/t2-html-css-dom-p2.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Oliver Stigley: Udacity Reflection Pt 2</title>
-    
+<head>
+	<title>Oliver Stigley: Udacity Reflection Pt 2</title>
+	
 	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 	<link rel="stylesheet" type="text/css" href="../styles/main.css">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script type="text/javascript" src="../scripts/myScripts.js"></script>
 
-  </head>
-  
-  <body>
-  	  	<script type="text/javascript" src="../scripts/header.js"></script>
-  	  	<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
-  	  	<div class="container">
-	  
-		  	<div class="row">
-			  	<div class="twelve columns heading">
-				  		<h3>Udacity Reflection Pt 2</h3>
-			  			<h5>Oliver Stigley</h5>
-			  	</d
-				  	iv>
-		  	</div>
+</head>
 
+<body>
+	<div id="mypic">
+		<script type="text/javascript" src="../scripts/header.js"></script>
+		<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
 		<div class="container">
+			
 			<div class="row">
-				<div class="twelve columns blogcontent">
-					<p>Date: 2 March 2016.</p>
-
-				 	<h5>What is grid based design?</h5>
-				 	<p>
-					 	Grid based design utilises columns in browswer, to give better structure to the page layout. Usually there are 12 colums, each taking up 8.33% of the page width.  This is because 12 is easily divisible by 2, 3 and 4.
-				 	</p>
-
-				 	<h5>Whats all the hype about responsive webpages?</h5>
-				 	<p>
-					 	It makes sense to have a webpage adapt to the viewing port of the device being used.  CSS can now be adapted such that it responds to the device automatically, making easy viewing for the visitor.
-				 	</p>
-
-				 	<h5>Semantic structure</h5>
-				 	<p>
-					 	I'm a little confused about this question.
-				 	</p>
-
-				 	<h5>Any other points you found interesting and want to reflect on</h5>
-				 	<p>
-				 	Grid based design utilises columns in browswer, to give better structure to the page layout.
-				 	</p>
+				<div class="twelve columns heading">
+					<h3>Udacity Reflection Pt 2</h3>
+					<h5>Oliver Stigley</h5>
 				</div>
 			</div>
 		</div>
-	  </div>
 	</div>
-  </body>
+
+	<div class="container">
+		<div class="row">
+			<div class="twelve columns blogcontent">
+				<p>Date: 2 March 2016.</p>
+
+				<h5>What is grid based design?</h5>
+				<p>
+					Grid based design utilises columns in browswer, to give better structure to the page layout. Usually there are 12 colums, each taking up 8.33% of the page width.  This is because 12 is easily divisible by 2, 3 and 4.
+				</p>
+
+				<h5>Whats all the hype about responsive webpages?</h5>
+				<p>
+					It makes sense to have a webpage adapt to the viewing port of the device being used.  CSS can now be adapted such that it responds to the device automatically, making easy viewing for the visitor.
+				</p>
+
+				<h5>Semantic structure</h5>
+				<p>
+					I'm a little confused about this question.
+				</p>
+
+				<h5>Any other points you found interesting and want to reflect on</h5>
+				<p>
+					Grid based design utilises columns in browswer, to give better structure to the page layout.
+				</p>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
 
 
