--- a/blogs/c7-motivation.html
+++ b/blogs/c7-motivation.html
@@ -18,16 +18,19 @@
 	  </head>
 	  
 	  <body>
-			<script type="text/javascript" src="../scripts/header.js"></script>
-			<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
-	  	  	<section class="container">
-		  
-			  	<div class="row">
-				  	<header class="twelve columns heading">
-					  		<h3>Motivation</h3>
-				  			<h5>Oliver Stigley</h5>
-				  	</header>
-			  	</div>
+	  	<div id="mypic">
+	  		<script type="text/javascript" src="../scripts/header.js"></script>
+	  		<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
+	  		<section class="container">
+
+	  			<div class="row">
+	  				<header class="twelve columns heading">
+	  					<h3>Motivation</h3>
+	  					<h5>Oliver Stigley</h5>
+	  				</header>
+	  			</div>
+	  		</section>
+	  	</div>
 
 				<section class="container">
 					<div class="row">
@@ -61,7 +64,5 @@
 						</article>
 					</div>
 				</section>
-		  </section>
-		</div>
 	  </body>
 	</html>
