Week 8 technical blog

--- a/blogs/blogs-index.html
+++ b/blogs/blogs-index.html
@@ -34,6 +34,11 @@
 			<div class="twelve columns bloglist">
 				<ul>
 					<li>
+						<a href="t7-testing.html">Scope in Javascript</a>
+						<p>Date 12 April 2016</p>
+					</li>
+
+					<li>
 						<a href="c7-motivation.html">Motivation</a>
 						<p>Date 7 April 2016</p>
 					</li>
