--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
 				<content class="hide mycontent bloglist">	
 					<ul>
 						<li>
+							<a href="blogs/t7-testing.html">Scope in Javascript</a>
+							<p>Date 12 April 2016</p>
+						</li>
+						<li>
 							<a href="blogs/c7-motivation.html">Motivation</a>
 							<p>Date 7 April 2016</p>
 						</li>
