Index updated with js blog.js populator

--- a/blogs/blogs-index.html
+++ b/blogs/blogs-index.html
@@ -34,7 +34,7 @@
 			<div class="twelve columns bloglist">
 				<ul>
 					<li>
-						<a href="t7-testing.html">Scope in Javascript</a>
+						<a href="blogs/t7-testing.html">Scope in Javascript</a>
 						<p>Date 12 April 2016</p>
 					</li>
 
