--- a/blogs/t6-js-language.html
+++ b/blogs/t6-js-language.html
@@ -33,6 +33,7 @@
 		<section class="container">
 			<div class="row">
 				<article class="twelve columns blogcontent">
+					<h3>JS Language</h3>
 					<p>01 April 2016</p>
 
 					<h5>Parentheses ()</h5>
