new blogs and blog indexing

--- a/blogs/t7-testing.html
+++ b/blogs/t7-testing.html
@@ -2,7 +2,7 @@
 	<!DOCTYPE html>
 	<html>
 	  <head>
-	    <title>Oliver Stigley: Scope</title>
+	    <title>Oliver Stigley: Scope & Closure</title>
 	    
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,13 +19,11 @@
 	  <body>
 			<div id="mypic">
 				<script type="text/javascript" src="../scripts/header.js"></script>
-
-				<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
 		  	  	<section class="container">
 			  
 				  	<div class="row">
 					  	<header class="twelve columns heading">
-						  		<h3>Javscript Scope</h3>
+						  		<h3>Scope & Closure</h3>
 					  			<h5>Oliver Stigley</h5>
 					  	</header>
 				  	</div>
@@ -50,7 +48,7 @@
 						</p>
 
 						<p>
-							Javascript remembers what local variables can be accessed by which code, by giving it a ‘closure’ reference.  We can think of closure as a parent deciding which children to invite to their child’s birthday party, and which they would rather not associate with.  
+							Javascript remembers what local variables can be accessed by which code, by giving it a ‘closure’ reference. A closure is a special kind of object that combines two things: a <strong>function</strong>, and the <strong>environment</strong> in which that function was created. The environment consists of any local variables that were in-scope at the time that the closure was created.  
 						</p>
 
 						<p>
